# halo2ecc-s

./: Cargo.toml
src/: assign.rs
src/circuit/: base_chip.rs  bls12_381_pairing_chip.rs  bn256_pairing_chip.rs  ecc_chip.rs  fq12.rs  integer_chip.rs  pairing_chip.rs
src/tests/: mod.rs  native_scalar_pairing_chip_on_prove.rs  native_scalar_pairing_chip_wi.rs
