[package]
name = "halo2ecc-s"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
num-integer = "0.1"
num-bigint = { version = "0.4.5", features = ["rand"] }
num-traits = "0.2.18"
rayon = "1.5.2"
ark-std = { version = "0.4.0" }

[dev-dependencies]
chrono = "0.4.19"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rand_xorshift = "0.3"

[features]
default = []
cuda = ["halo2_proofs/cuda"]
profile = ["ark-std/print-trace", "halo2_proofs/profile"]

[patch."https://github.com/lanbones/pairing"]
pairing = {git ="https://github.com/mooreland/pairing", branch="on_prove_pairing",package = "pairing_bn256"}
